src/assets/scss/modules/_take-over.scss
.take-over {
  padding: 68px 6.25% 0;
  width: 100%;
  height: 100%;
  background: $offWhite;
  text-align: center;

  &__news-flash {
    position: absolute;
    width: 100px;
    top: calc(50% - 50px);
    left: calc(50% - 50px);
    text-align: center;
    transition: opacity 0.5s ease-in-out;

    &__animation {
      width: 100px;
      height: 100px;
      fill: $marshPassion;
      display: inline-block;
      margin: 0 auto;
      transform: translateX(2px);
    }
    &__title {
      color: $marshPassion;
      text-transform: uppercase;
      font-size: 16px;
    }

    &.add {
      opacity: 0;
    }
    &.show {
      opacity: 1;
    }
    &.hide {
      opacity: 0;
    }
  }
  &__content {
    height: 100%;
    transition: opacity 0.5s ease-in-out;
    margin: 0 auto;
    display: flex;
    flex-direction: column;

    &__message {
      flex: 2;
      max-width: 700px;
      margin: 0 auto;
      display: flex;
      flex-direction: column;
      justify-content: center;

      &__close {
        width: 50px;
        height: 50px;
        display: block;
        border: 0;
        background: none;
        margin: 0 auto;
        padding: 0;

        svg {
          width: 50px;
          height: 50px;
          fill: $nonBlack;
        }
        &:focus {
          -webkit-focus-ring-color: rgba(0,0,0,0);
          outline: none;
        }
      }
      &__title {
        color: $marshPassion;
        margin-top: 3%;
        font-size: 32px;
      }
      &__description {
        margin-top: 3%;
      }
      &__links {
        display: flex;
        flex-direction: column;
        list-style: none;
        padding: 0;

        &__link-item {
          margin-top: 3%;
          text-align: center;

          &__link {
            border-bottom: 2px solid $mare;
          }
        }
      }

      &__title,
      &__description,
      &__links {
        transition: transform 0.5s ease-out, opacity 0.5s ease-out;
        transition-delay: 0s;
      }
      &__description,
      &__links {
        transition-delay: 0.35s;
      }
    }
    &__image {
      flex: 1;
      background: url('/images/home/moodnotes_takeover_image.png');
      background-repeat: no-repeat;
      background-position: center bottom;
      background-clip: content-box;
      background-size: contain;
    }
    &.add {
      opacity: 0;

      .take-over__content {
        &__title,
        &__description,
        &__links {
          opacity: 0;
          transform: translateY(30px);
        }
      }
    }
    &.show {
      opacity: 1;

      .take-over__content {
        &__title,
        &__description,
        &__links {
          opacity: 1;
          transform: translateY(0px);
        }
      }
    }
    &.hide {
      opacity: 0;

      .take-over__content {
        &__title,
        &__description,
        &__links {
          opacity: 0;
          transform: translateY(30px);
        }
      }
    }
  }

  @include susy-breakpoint($bp-large, $susy) {
    &__content__message {
      &__title {
        margin-top: 5%;
        font-size: 40px;
      }
      &__links {
        flex-direction: row;
        justify-content: center;

        &__link-item {
          margin-left: 30px;
          margin-right: 0;

          &:first-of-type {
            margin-left: 0;
          }
        }
      }
    }
  }
  @include susy-media(max-height 500px) {
    &__content__message {
      &__title,
      &__description,
      &__links__link-item {
        margin-top: 2%;
      }
      &__links {
        margin: 0 0 20px;
      }
      &__title {
        font-size: 25px;
      }
    }
  }
}

